// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeCard should render 1`] = `
<div>
  <div
    data-testid="ExchangeCard--changenow"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 gawQiQ"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-3"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-11 h-11"
          >
            <img
              alt="ChangeNOW Logo"
              class="object-cover w-full h-full"
              src="https://exchanges.payvo.com/images/changenow/thumbnail.png"
            />
          </div>
          <div
            class="flex flex-col truncate"
          >
            <div
              class="truncate font-semibold text-lg link"
            >
              ChangeNOW
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ExchangeCard should render when the exchange is not active 1`] = `
<div>
  <div
    data-testid="ExchangeCard--changenow"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 gawQiQ"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-3"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-11 h-11"
          >
            <img
              alt="ChangeNOW Logo"
              class="object-cover w-full h-full"
              src="https://exchanges.payvo.com/images/changenow/thumbnail.png"
            />
          </div>
          <div
            class="flex flex-col truncate"
          >
            <div
              class="truncate font-semibold text-lg text-theme-primary-100 dark:text-theme-secondary-800"
            >
              ChangeNOW
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;
